<resources>
    <!-- activity_main -->
    <string name="app_name">TicTacToe</string>
    <string name="txt_turn">Au tour du joueur : </string>
    <string name="btn_retour">Retour</string>
    <string name="txt_X">X</string>
    <string name="txt_enPartie">En Partie</string>
    <string name="txt_joueur">Vous êtes le joueur : </string>
    <string name="btn_clear">Clear</string>

    <!-- activity_rules -->
    <string name="txt_titreRegles">Règles</string>
    <string name="txt_regles_1">Deux joueurs posent tour à tour un rond, pour l\'un, une croix, pour l\'autre, dans une grille de 3 cases par 3.</string>
    <string name="txt_regles_2">Le but du jeu est d\'obtenir un alignement (en ligne, colonne ou diagonale) de ces trois signes.</string>
    <string name="txt_regles_3">Les signes une fois posés ne sont plus déplaçables.</string>
    <string name="image">image</string>


</resources>