<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tictactoe_menu"
        android:contentDescription="@string/image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txt_titreRegles"
        android:textSize="@dimen/size_txt_btn"
        android:layout_marginBottom="@dimen/margin_bottom_rules"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_rules"
        android:text="@string/txt_regles_1"
        android:textSize="@dimen/size_txt_rules" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_rules"
        android:text="@string/txt_regles_2"
        android:textSize="@dimen/size_txt_rules" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_rules"
        android:text="@string/txt_regles_3"
        android:textSize="@dimen/size_txt_rules" />

    <Button
        android:id="@+id/btn_back_rules"
        android:layout_width="@dimen/width_btn_rules"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/btn_retour"
        android:textColor="@android:color/white"
        tools:text="Quitter" />


</LinearLayout>